pars Error Pages

--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -13,6 +13,12 @@ server
         default=index.html
         autoindex=on
     }
+    location:
+    {
+        root=website
+        default=index.html
+        autoindex=on
+    }
 
     error_page:401:website/error_page/401.html
     error_page:403:website/error_page/403.html
@@ -33,6 +39,9 @@ server
         root=/goinfre/ayennoui/ybouddou
         default=Makefile
         autoindex=on
+        redirect=on
+        code=301
+        redirect_path= http://host/uri
     }
 
     location:/autoindex
@@ -86,7 +95,7 @@ server
         default=file.html
     }
 ]
-sdfksd
+
 server
 
 
