--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -13,12 +13,12 @@ server
         default=index.html
         autoindex=on
     }
-    location:
-    {
-        root=website
-        default=index.html
-        autoindex=on
-    }
+    # location:
+    # {
+    #     root=website
+    #     default=index.html
+    #     autoindex=on
+    # }
 
     error_page:401:website/error_page/401.html
     error_page:403:website/error_page/403.html
