--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -11,6 +11,7 @@ server
     {
         root=website
         default=index.html
+        index index.php jhj.html
         autoindex=on
     }
     # location:
@@ -69,7 +70,7 @@ server
         default=payments
     }
 
-]
+
 
 server
 
