fix Server Class

--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -55,13 +55,13 @@ server
     location:/upload
     {
         root=/goinfre/ayennoui/ybouddou
-        allowed_methods=GET,PUT,HEAD,POST
+        allowed_methods=GET,DELETE,POST
         limit_client_body=20
     }
 
     location:/methods
     {
-        allowed_methods=HEAD
+        allowed_methods=DELETE
     }
 
     location:/private/
@@ -70,7 +70,7 @@ server
         default=payments
     }
 
-
+]
 
 server
 
@@ -78,7 +78,7 @@ server
     host:0.0.0.0
     port:8080
 
-    allowed_methods:GET,HEAD
+    allowed_methods:GET,DELETE
     server_name:ayoub
     root:/goinfre/ayennoui/ybouddou
 
@@ -97,14 +97,11 @@ server
 ]
 
 server
-
-
-
 [
     host:0.0.0.0
     port:5000
 
-    allowed_methods:GET,HEAD
+    allowed_methods:GET,DELETE
     root:/goinfre/ayennoui/ybouddou
 
     location:/
