--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -1,100 +1,111 @@
-server
-[
-    host:0.0.0.0
-    port:80
-    # port:22
+# server
+# [
+#     host:0.0.0.0
+#     port:80
+#     # port:22
 
-    server_name:localhost
-    allowed_methods:GET
+#     root:/public
 
-    location:/
-    {
-        root=website
-        default=index.html
-        index index.php jhj.html
-        autoindex=on
-    }
-    # location:
-    # {
-    #     root=website
-    #     default=index.html
-    #     autoindex=on
-    # }
+#     server_name:localhost
+#     allowed_methods:GET,POST
 
-    error_page:401:website/error_page/401.html
-    error_page:403:website/error_page/403.html
-    error_page:404:website/error_page/404.html
-    error_page:405:website/error_page/405.html
-    error_page:413:website/error_page/413.html
-    error_page:500:website/error_page/500.html
-    error_page:505:website/error_page/505.html
+#     location:/
+#     {
+#         # root=website
+#         index=index.html
+#         index index.php jhj.html
+#         autoindex=on
+#     }
+#     # location:
+#     # {
+#     #     root=website
+#     #     index=index.html
+#     #     autoindex=on
+#     # }
 
-    location:/*.bla
-    {
-        allowed_methods=POST
-        cgi_uri=/goinfre/ayennoui/ybouddou/test/
-    }
+#     error_page:401:website/error_page/401.html
+#     error_page:403:website/error_page/403.html
+#     error_page:404:website/error_page/404.html
+#     error_page:405:website/error_page/405.html
+#     error_page:413:website/error_page/413.html
+#     error_page:500:website/error_page/500.html
+#     error_page:505:website/error_page/505.html
 
-    location:/dir
-    {
-        root=/goinfre/ayennoui/ybouddou
-        default=Makefile
-        autoindex=on
-        redirect=on
-        code=301
-        redirect_path= http://host/uri
-    }
+#     location:/*.bla
+#     {
+#         allowed_methods=POST
+#         cgi_uri=/goinfre/ayennoui/ybouddou/test/
+#     }
 
-    location:/autoindex
-    {
-        root=/goinfre/ayennoui/ybouddou
-        default=nothing
-        autoindex=on
-    }
+#     location:/dir
+#     {
+#         root=/goinfre/ayennoui/ybouddou
+#         index=Makefile
+#         autoindex=on
+#         redirect=on
+#         code=301
+#         redirect_path= http://host/uri
+#     }
 
-    location:/upload
-    {
-        root=/goinfre/ayennoui/ybouddou
-        allowed_methods=GET,DELETE,POST
-        limit_client_body=20
-    }
+#     location:/autoindex
+#     {
+#         root=/goinfre/ayennoui/ybouddou
+#         index=nothing
+#         autoindex=on
+#     }
 
-    location:/methods
-    {
-        allowed_methods=DELETE
-    }
+#     location:/upload
+#     {
+#         root=/goinfre/ayennoui/ybouddou
+#         allowed_methods=GET,DELETE,POST
+#         limit_client_body=20
+#     }
 
-    location:/private/
-    {
-        root=/goinfre/ayennoui/ybouddou/private
-        default=payments
-    }
+#     location:/methods
+#     {
+#         allowed_methods=DELETE
+#     }
 
-]
+#     location:/private/
+#     {
+#         root=/goinfre/ayennoui/ybouddou/private
+#         index=payments
+#     }
 
-server
+# ]
 
-[
-    host:0.0.0.0
-    port:8080
+# server
 
-    allowed_methods:GET,DELETE
-    server_name:ayoub
-    root:/goinfre/ayennoui/ybouddou
+# [
+#     host:0.0.0.0
+#     port:8080
 
-    location:/
-    {
-        root=website
-        autoindex=on
-        default=file.html
-        allowed_methods=GET
-    }
+#     # allowed_methods:GET,DELETE
+#     # server_name:ayoub
 
-    location:/dir/
-    {
-        default=file.html
-    }
-]
+#     root:/goinfre/ayennoui/ybouddou
+
+#     client_max_body_size:20
+    
+#     location:/
+#     {
+#         # autoindex=on
+#         # index=file.html
+#         # allowed_methods=GET
+
+#         redirect=on
+#         code=301
+#         redirect_path= http://host/uri
+
+#         cgi_uri=/goinfre/ayennoui/ybouddou/test/
+
+#     }
+
+#     location:/dir/
+#     {
+#         index=file.html
+#     }
+# ]
 
 server
 [
@@ -107,7 +118,7 @@ server
     location:/
     {
         root=website
-        default=file.html
+        index=file.html
         allowed_methods=GET
     }
 ]
