--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -111,12 +111,14 @@ server
 [
     host:0.0.0.0
     port:5000
+    server_name: namei
 
     allowed_methods:GET,DELETE
     root:/goinfre/ayennoui/ybouddou
 
     location:/
     {
+        # allowed_methods: GET
         root=website
         index=file.html
         allowed_methods=GET
