--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -119,6 +119,6 @@ server
     {
         root=website
         index=file.html
-        allowed_methods=GET
+        allowed_methods= GET,
     }
 ]
