--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -118,9 +118,9 @@ server
 
     location:/
     {
-        # allowed_methods: GET
+        allowed_methods=PPPP
         root=website
         index=file.html
-        allowed_methods=GET
+        # allowed_methods=GET
     }
 ]
