handle duplicated location and port must be digital

--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -40,8 +40,8 @@
 #     location:/dir
 #     {
 #         root=/goinfre/ayennoui/ybouddou
-#         index=Makefile
 #         autoindex=on
+#         index=Makefile
 #         redirect=on
 #         code=301
 #         redirect_path= http://host/uri
@@ -109,8 +109,8 @@
 
 server
 [
-    host:0.0.0.0
-    port:5000
+    host: exlf_jf.com
+    port: 6568
 
     allowed_methods:GET,DELETE
     root:/goinfre/ayennoui/ybouddou
@@ -120,5 +120,11 @@ server
         root=website
         index=file.html
         allowed_methods= GET,
+    }
+    location:/error/
+    {
+        root=website/error/
+        index=error.html
+        allowed_methods= GET, POST
     }
 ]
