--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -121,6 +121,6 @@ server
         allowed_methods=GET
         root=website
         index=file.html
-        allowed_methods=GET
+        # allowed_methods=GET
     }
 ]
