fix setIndex() in Location

--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -109,8 +109,8 @@
 
 server
 [
-    host: exlf_jf.com
-    port: 6568
+    host: localhost
+    port: 80
 
     allowed_methods:GET,DELETE
     root:/goinfre/ayennoui/ybouddou
