--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -124,11 +124,12 @@ server
         # allowed_methods=GET
     }
 
-    location:/
+    location:/dir/
     {
         allowed_methods=GET
         root=website
-        index=file.html
+        # index=file.html
+        autoindex=on
         # allowed_methods=GET
     }
 ]
