--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -118,9 +118,10 @@ server
 
     location:/
     {
-        allowed_methods=GET
-        root=website
-        index=file.html
+        allowed_methods=GET,DELETE
+        # root=website
+        # index=file.html
+		# autoindex=on
         # allowed_methods=GET
     }
 
@@ -128,10 +129,16 @@ server
     {
         allowed_methods=GET
         root=website
-        # index=file.html
-        autoindex=on
+        index=file.html
+        # autoindex=on
         # allowed_methods=GET
     }
+	# location:/upload
+	# {
+	# 	root=website
+	# 	allowed_methods=POST
+	# 	limit_client_body=20
+	# }
 ]
 
 server
