--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -107,6 +107,7 @@
 #     }
 # ]
 
+
 server
 [
     host:0.0.0.0
@@ -115,11 +116,12 @@ server
 
     allowed_methods:GET,DELETE
     root:/goinfre/ayennoui/ybouddou
-
+    client_max_body_size:20
+    error_page:403:website/error_page/403.html
     location:/
     {
         allowed_methods=GET,DELETE
-        # root=website
+        root=website1
         # index=file.html
 		# autoindex=on
         # allowed_methods=GET
@@ -127,12 +129,20 @@ server
 
     location:/dir/
     {
-        allowed_methods=GET
-        root=website
+        allowed_methods=GET,DELETE
+        root=website2
         index=file.html
         # autoindex=on
         # allowed_methods=GET
     }
+    # location:/dir
+    # {
+    #     root=website/mydir
+    #     index=index.html
+    #     redirect=on
+    #     code=301
+    #     redirect_path= http://host/uri
+    # }
 	# location:/upload
 	# {
 	# 	root=website
