--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -112,7 +112,7 @@ server
 [
     host:0.0.0.0
     port:5000
-    server_name: server1
+    server_name: 127.0.0.1
 
     allowed_methods:GET,DELETE
     root:/goinfre/ayennoui/ybouddou
@@ -121,16 +121,16 @@ server
     location:/
     {
         allowed_methods=GET,DELETE
-        root=website1
+        root=website
         # index=file.html
-		# autoindex=on
+		autoindex=on
         # allowed_methods=GET
     }
 
-    location:/dir/
+    location:/dir
     {
         allowed_methods=GET,DELETE
-        root=website2
+        root=website
         index=file.html
         # autoindex=on
         # allowed_methods=GET
@@ -143,12 +143,13 @@ server
     #     code=301
     #     redirect_path= http://host/uri
     # }
-	# location:/upload
-	# {
-	# 	root=website
-	# 	allowed_methods=POST
-	# 	limit_client_body=20
-	# }
+	location:/upload
+	{
+		allowed_methods=POST
+        upload_enable=on
+		limit_client_body=20
+        upload_store=website
+	}
 ]
 
 server
