--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -115,25 +115,33 @@ server
     server_name: 127.0.0.1
 
     allowed_methods:GET,DELETE
-    root:/goinfre/ayennoui/ybouddou
+    root:website
     client_max_body_size:20
     error_page:403:website/error_page/403.html
+    # error_page:404:website/error_page/404.html
     location:/
     {
         allowed_methods=GET,DELETE
         root=website
-        # index=file.html
-		autoindex=on
+        index=file.html
+		# autoindex=on
         # allowed_methods=GET
     }
 
-    location:/dir
+    location:/dir/
     {
         allowed_methods=GET,DELETE
         root=website
         index=file.html
         # autoindex=on
         # allowed_methods=GET
+    }
+    location:/ayoub
+    {
+        allowed_methods=GET
+        redirect=on
+        code=301
+        redirect_path= http://google.com/
     }
     # location:/dir
     # {
@@ -150,6 +158,13 @@ server
 		limit_client_body=20
         upload_store=website
 	}
+    location:/test_u
+	{
+		allowed_methods=GET
+        root=website/website
+        index=test.html
+	}
+    # pwd/root/upload_store
 ]
 
 server
