--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -132,8 +132,8 @@ server
     {
         allowed_methods=GET,DELETE
         root=website
-        index=file.html
-        # autoindex=on
+        # index=file.html
+        autoindex=on
         # allowed_methods=GET
     }
     location:/ayoub
