--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -165,6 +165,11 @@ server
         index=test.html
 	}
     # pwd/root/upload_store
+
+    location: *.php
+    {
+       fastcgi_pass = on
+    }
 ]
 
 server
