Parse CGI response

--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -121,16 +121,16 @@ server
     # error_page:404:website/error_page/404.html
     location:/
     {
-        allowed_methods=GET,DELETE
+        allowed_methods=GET
         root=website
         index=file.html
 		# autoindex=on
         # allowed_methods=GET
     }
 
-    location:/dir/
+    location:/put_test
     {
-        allowed_methods=GET,DELETE
+        allowed_methods=POST
         root=website
         # index=file.html
         autoindex=on
@@ -160,15 +160,23 @@ server
 	}
     location:/test_u
 	{
-		allowed_methods=GET
-        root=website/website
-        index=test.html
+		allowed_methods=DELETE
+        root=website
+        # index=test.html
 	}
     # pwd/root/upload_store
 
     location: *.php
     {
-       fastcgi_pass = on
+        fastcgi_pass = /Users/yslati/goinfre/.brew/bin/php-cgi
+    }
+    location: *.js
+    {
+       fastcgi_pass = /Users/yslati/goinfre/.brew/bin/node
+    }
+    location: *.py
+    {
+       fastcgi_pass = /usr/bin/python
     }
 ]
 
@@ -176,7 +184,7 @@ server
 [
     host:0.0.0.0
     port:8080
-    server_name: server2
+    server_name: 127.0.0.1
 
     allowed_methods:GET,DELETE
     root:/goinfre/ayennoui/ybouddou
