--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -168,11 +168,11 @@ server
 
     location: *.php
     {
-        fastcgi_pass = /Users/aaqlzim/.brew/bin/php-cgi 
+        fastcgi_pass = /Users/yslati/goinfre/.brew/bin/php-cgi
     }
     location: *.js
     {
-       fastcgi_pass = /Users/aaqlzim/.brew/bin/node
+       fastcgi_pass = /Users/yslati/.brew/bin/node
     }
     location: *.py
     {
