--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -128,6 +128,14 @@ server
         # allowed_methods=GET
     }
 
+    location:/cgi_test
+    {
+        allowed_methods=POST
+        root=website
+        upload_enable=on
+        upload_store=website/upload
+    }
+
     location:/put_test
     {
         allowed_methods=POST
@@ -172,7 +180,7 @@ server
     }
     location: *.js
     {
-       fastcgi_pass = /Users/yslati/.brew/bin/node
+       fastcgi_pass = /Users/yslati/goinfre/.brew/bin/node
     }
     location: *.py
     {
