--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -176,11 +176,11 @@ server
 
     location: *.php
     {
-        fastcgi_pass = /Users/yslati/goinfre/.brew/bin/php-cgi
+        fastcgi_pass = /Users/aaqlzim/goinfre/.brew/bin/php-cgi
     }
     location: *.js
     {
-       fastcgi_pass = /Users/yslati/goinfre/.brew/bin/node
+       fastcgi_pass = /Users/aaqlzim/goinfre/.brew/bin/node
     }
     location: *.py
     {
