--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -116,7 +116,7 @@ server
 
     allowed_methods:GET,DELETE
     root:website
-    client_max_body_size:1000
+    # client_max_body_size:1000
     error_page:403:website/error_page/403.html
     # error_page:404:website/error_page/404.html
     location:/
@@ -163,7 +163,7 @@ server
 	{
 		allowed_methods=POST
         upload_enable=on
-		limit_client_body=20
+		# limit_client_body=20
         upload_store=website
 	}
     location:/test_u
