--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -114,7 +114,7 @@ server
     port:5000
     server_name: 127.0.0.1
 
-    allowed_methods:GET,DELETE
+    allowed_methods:GET
     root:website
     # client_max_body_size:1000
     error_page:403:website/error_page/403.html
@@ -123,9 +123,8 @@ server
     {
         allowed_methods=GET
         root=website
-        index=file.html
-		# autoindex=on
-        # allowed_methods=GET
+		autoindex=on
+        # index=file.html
     }
 
     location:/cgi_test
@@ -151,20 +150,24 @@ server
         code=301
         redirect_path= http://google.com/
     }
-    # location:/dir
-    # {
-    #     root=website/mydir
-    #     index=index.html
-    #     redirect=on
-    #     code=301
-    #     redirect_path= http://host/uri
-    # }
+    location:/dir
+    {
+        allowed_methods=GET
+        root=website
+        autoindex=on
+        index=file.html
+    }
 	location:/upload
 	{
 		allowed_methods=POST
         upload_enable=on
 		# limit_client_body=20
         upload_store=website
+	}
+    location:/delete
+	{
+		allowed_methods=DELETE
+        root=website
 	}
     location:/test_u
 	{
@@ -178,14 +181,14 @@ server
     {
         fastcgi_pass = /Users/aaqlzim/goinfre/.brew/bin/php-cgi
     }
-    location: *.js
-    {
-       fastcgi_pass = /Users/aaqlzim/goinfre/.brew/bin/node
-    }
-    location: *.py
-    {
-       fastcgi_pass = /usr/bin/python
-    }
+    # location: *.js
+    # {
+    #    fastcgi_pass = /Users/aaqlzim/goinfre/.brew/bin/node
+    # }
+    # location: *.py
+    # {
+    #    fastcgi_pass = /usr/bin/python
+    # }
 ]
 
 server
