Fix Alot of Bugs

--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -191,8 +191,29 @@ server
     # }
 ]
 
+
+
 server
 [
+    # POST /index.php HTTP/1.1
+# Host: 127.0.0.1
+# Content-Type: application/x-www-form-urlencoded
+# Transfer-Encoding: chunked
+# Content-Length: 10
+
+# name=ayoub
+
+# POST /index.php HTTP/1.1
+# User-Agent: PostmanRuntime/7.25.0
+# Accept: */*
+# Postman-Token: 65e6c89e-ac5f-49c8-9477-d9a6dfb56781
+# Host: 127.0.0.1:5000
+# Accept-Encoding: gzip, deflate, br
+# Connection: keep-alive
+# Content-Type: application/x-www-form-urlencoded
+# Content-Length: 10
+
+# name=ayoub
     host:0.0.0.0
     port:8080
     server_name: 127.0.0.1
