ADD LAST TOUCH but NOT LEAST

--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -114,17 +114,17 @@ server
     port:5000
     server_name: 127.0.0.1
 
-    allowed_methods:GET
+    # allowed_methods:GET
     root:website
     # client_max_body_size:1000
     error_page:403:website/error_page/403.html
     # error_page:404:website/error_page/404.html
     location:/
     {
-        allowed_methods=GET
+        allowed_methods=GET, POST
         root=website
-		autoindex=on
-        # index=file.html
+		# autoindex=on
+        index=file.html
     }
 
     location:/cgi_test
@@ -138,9 +138,10 @@ server
     location:/put_test
     {
         allowed_methods=POST
-        root=website
-        # index=file.html
-        autoindex=on
+         upload_enable=on
+		# limit_client_body=20
+        upload_store=website
+        # autoindex=on
         # allowed_methods=GET
     }
     location:/ayoub
@@ -159,9 +160,8 @@ server
     }
 	location:/upload
 	{
-		allowed_methods=POST
+		allowed_methods=POST, DELETE
         upload_enable=on
-		# limit_client_body=20
         upload_store=website
 	}
     location:/delete
@@ -169,17 +169,9 @@ server
 		allowed_methods=DELETE
         root=website
 	}
-    location:/test_u
-	{
-		allowed_methods=DELETE
-        root=website
-        # index=test.html
-	}
-    # pwd/root/upload_store
-
     location: *.php
     {
-        fastcgi_pass = /Users/aaqlzim/goinfre/.brew/bin/php-cgi
+        fastcgi_pass = /Users/yslati/goinfre/.brew/bin/php-cgi
     }
     # location: *.js
     # {
