--- a/parsing/file.conf
+++ b/parsing/file.conf
@@ -116,15 +116,15 @@ server
 
     # allowed_methods:GET
     root:website
-    # client_max_body_size:1000
+    client_max_body_size:10
     error_page:403:website/error_page/403.html
     # error_page:404:website/error_page/404.html
     location:/
     {
-        allowed_methods=GET, POST
+        allowed_methods=DELETE
         root=website
 		# autoindex=on
-        index=file.html
+        # index=file.html
     }
 
     location:/cgi_test
@@ -156,7 +156,13 @@ server
         allowed_methods=GET
         root=website
         autoindex=on
-        index=file.html
+        # index=file.html
+    }
+    location:/dir1
+    {
+        allowed_methods=GET
+        root=website1
+        autoindex=on
     }
 	location:/upload
 	{
