--- a/config/webServ.conf
+++ b/config/webServ.conf
@@ -19,7 +19,7 @@ server
 
     location:/cgi_test
     {
-        allowed_methods=POST
+        allowed_methods=POST, GET
         root=website
         upload_enable=on
         upload_store=website/upload
@@ -67,16 +67,16 @@ server
 	}
     location: *.php
     {
-        fastcgi_pass = /Users/yslati/goinfre/.brew/bin/php-cgi
+        fastcgi_pass = /Users/aaqlzim/goinfre/.brew/bin/php-cgi
     }
-    # location: *.js
-    # {
-    #    fastcgi_pass = /Users/aaqlzim/goinfre/.brew/bin/node
-    # }
-    # location: *.py
-    # {
-    #    fastcgi_pass = /usr/bin/python
-    # }
+    location: *.js
+    {
+       fastcgi_pass = /Users/aaqlzim/goinfre/.brew/bin/node
+    }
+    location: *.py
+    {
+       fastcgi_pass = /usr/bin/python
+    }
 ]
 
 
@@ -92,8 +92,25 @@ server
     location:/
     {
         allowed_methods=GET
-        root=website
+        root=website1
+        index=index.html
+    }
+    location:/dir
+    {
+        allowed_methods=GET, DELETE
+        root=website1
         index=file.html
-        # allowed_methods=GET
+    }
+    location:/route1
+    {
+        allowed_methods=GET
+        root=website1
+        autoindex=on
+    }
+    location:/route2
+    {
+        allowed_methods=GET
+        root=website1
+        autoindex=on
     }
 ]
