--- a/config/webServ.conf
+++ b/config/webServ.conf
@@ -1,26 +1,27 @@
 server
 [
     host:0.0.0.0
-    port:5000
-    server_name: 127.0.0.1
+    port:80
+    server_name: server1.com
 
     # allowed_methods:GET
     root:website
-    client_max_body_size:10
+    # client_max_body_size:10
     error_page:403:website/error_page/403.html
     # error_page:404:website/error_page/404.html
     location:/
     {
-        allowed_methods=DELETE
+        allowed_methods=GET
         root=website
 		# autoindex=on
-        # index=file.html
+        index=file.html
     }
 
     location:/cgi_test
     {
         allowed_methods=POST, GET
         root=website
+        index=file.html
         upload_enable=on
         upload_store=website/upload
     }
@@ -83,8 +84,8 @@ server
 server
 [
     host:0.0.0.0
-    port:8080
-    server_name: 127.0.0.1
+    port:5000
+    server_name: server2.com
 
     allowed_methods:GET,DELETE
     root:/goinfre/ayennoui/ybouddou
